--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@egjs/react-flicking": "^4.10.9",
+    "@smastrom/react-rating": "^1.3.1",
     "daisyui": "^2.51.6",
     "firebase": "^9.21.0",
     "react": "^18.2.0",
