--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-lazy-load-image-component": "^1.5.6",
     "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.11.0",
+    "react-to-pdf": "^0.0.14",
     "react-toastify": "^9.1.2"
   },
   "devDependencies": {
